@@ -1,39 +1,46 @@
 package com.webjournal.exception;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
-import org.springframework.web.bind.annotation.ResponseStatus;
+import org.springframework.web.context.request.ServletWebRequest;
+import org.springframework.web.context.request.WebRequest;
 
-import javax.validation.ConstraintViolation;
-import javax.validation.ConstraintViolationException;
-import java.time.ZonedDateTime;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class ApiExceptionHandler {
-    @ExceptionHandler(value = {ApiRequestException.class})
-    public ResponseEntity<Object> handleApiRequestException(ApiRequestException e){
+    private static final Logger LOGGER = LoggerFactory.getLogger(ApiExceptionHandler.class);
 
-        ApiException apiException = new ApiException(
-                e.getMessage(),
-                e,
-                HttpStatus.NOT_FOUND,
-                ZonedDateTime.now());
-        return new ResponseEntity<>(apiException, apiException.getHttpStatus());
+    @ExceptionHandler(DatabaseFetchException.class)
+    public ResponseEntity<ApiErrorMessage> handleDatabaseFetchException(DatabaseFetchException e, WebRequest request){
+        LOGGER.error("Could not fetch data from database", e);
+        return getResponse(HttpStatus.NOT_FOUND, request, e.getMessage());
     }
 
-    @ExceptionHandler(ConstraintViolationException.class)
-    @ResponseStatus(HttpStatus.BAD_REQUEST)
-    public ResponseEntity<String> handleConstraintViolationException(ConstraintViolationException exception) {
-
-        List<String> errorMessages = exception.getConstraintViolations()
+    @ExceptionHandler(MethodArgumentNotValidException.class)
+    public ResponseEntity<ApiErrorMessage> handleMethodArgumentNotValidException(MethodArgumentNotValidException e, WebRequest request) {
+        LOGGER.error("Validation error", e);
+        List<String> errorMessages = e.getBindingResult().getFieldErrors()
                 .stream()
-                .map(ConstraintViolation::getMessage)
-                .collect(Collectors.toList());
+                .map(err -> err.getField() + ": " + err.getDefaultMessage()).toList();
+        return getResponse(HttpStatus.BAD_REQUEST, request, errorMessages.toString());
+    }
 
-        return ResponseEntity.badRequest().body(errorMessages.toString());
+    @ExceptionHandler(RegistrationException.class)
+    public ResponseEntity<ApiErrorMessage> handleBadAuthRequestException(RegistrationException e, WebRequest request) {
+        LOGGER.error("Could not register user", e);
+        return getResponse(HttpStatus.BAD_REQUEST, request, e.getMessage());
+    }
+
+    private ResponseEntity<ApiErrorMessage> getResponse(HttpStatus status, WebRequest request, String message) {
+        String path = ((ServletWebRequest)request).getRequest().getRequestURI();
+        ApiErrorMessage errorMessage = new ApiErrorMessage(status.value(), status.getReasonPhrase(), LocalDateTime.now(), path, message);
+        return new ResponseEntity<>(errorMessage, status);
     }
 }
